- Check why forgot password reset using wrong token (duplicate Token is posted because of hidden field) - Improve color picking for variation (shows pallet) - Fix Search error layout and SeachException handling (Search error shows top navigation) - Fix Seo sample data (removed []) - Check how to make currency not jump to second row (removed welcome!, limit user name with ellipses for smaller screen)

--- a/src/Presentation/FrontEnd/StoreWebApp/Content/themes/default/custom.css
+++ b/src/Presentation/FrontEnd/StoreWebApp/Content/themes/default/custom.css
@@ -41,9 +41,9 @@
     overflow: hidden;
 }
 
-.validation-summary-errors ul, .validation-summary-errors li {
-    width: auto !important;
-}
+    .validation-summary-errors ul, .validation-summary-errors li {
+        width: auto !important;
+    }
 
 .share-links {
     padding: 10px 0;
@@ -107,3 +107,26 @@ div.loading-ajax {
     .external-login .title {
         font-size: 18px !important;
     }
+
+
+.color-pallete {
+    margin-top: 10px;
+}
+
+.color-box:first-child {
+    margin-left: 0;
+}
+
+.color-box:hover {
+    border: 1px solid #088;
+}
+
+.color-box {
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+    float: left;
+    margin: 2px 0 0 5px;
+    border: 1px solid #ECECEA;
+    box-shadow: 0 0 3px 0 #888;
+}
